Bug 371828 - Need to generate events for midifer keys. r=mento.